# engine

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cuda-13.0-ubi9  Dockerfile.cuda-all  EMBEDDINGS_FIX.md  HANZO_ENGINE_INTEGRATION.md  LLM.md  README.md  compose.yml
.github/workflows/: build-image.yml  build_cpu.yaml  ci.yml  docs.yml  release.yml
docs/: ADAPTER_MODELS.md  ANYMOE.md  CARGO_FEATURES.md  CHAT_TOK.md  CONFIGURATION.md  DEEPSEEKV2.md  DEEPSEEKV3.md  DEVICE_MAPPING.md  EMBEDDINGGEMMA.md  EMBEDDINGS.md  ENGINE.md  FLASH_ATTENTION.md  GEMMA2.md  GEMMA3.md  GEMMA3N.md  GLM4.md  GLM4_MOE_LITE.md  GPT_OSS.md  HTTP.md  IDEFICS2.md  IDEFICS3.md  IMAGEGEN_MODELS.md  IMATRIX.md  INSTALLATION.md  ISQ.md  LLAMA4.md  LLaVA.md  MATFORMER.md  MINICPMO_2_6.md  MISTRAL3.md  MLA.md  NON_GRANULAR.md  OPENRESPONSES.md  PAGED_ATTENTION.md  PHI3.5MOE.md  PHI3V.md  PHI4MM.md  PYTHON_INSTALLATION.md  PYTHON_SDK.md  QUANTS.md  (+21 more)
docs/DISTRIBUTED/: DISTRIBUTED.md  NCCL.md  RING.md
docs/MCP/: client.md  configuration.md  server.md  transports.md
hanzo-engine/: Cargo.toml
hanzo-engine-dso/: Cargo.toml
hanzo-engine-dso/src/: lib.rs
hanzo-engine/src/: api.rs  lib.rs  main.rs  mistral_engine.rs
hanzo-engine/tests/: api.rs  mistral.rs
mistralrs/: Cargo.toml  README.md
mistralrs-audio/: Cargo.toml  README.md
mistralrs-bench/: README.md
mistralrs-cli/: Cargo.toml
mistralrs-core/: Cargo.toml  README.md
mistralrs-core/src/embedding_models/: bert.rs  layers.rs  mod.rs
mistralrs-core/src/pipeline/: embedding.rs  mod.rs
mistralrs-core/src/pipeline/loaders/: embedding_loaders.rs  mod.rs
mistralrs-core/src/vision_models/qwen3_vl/: mod.rs
mistralrs-macros/: Cargo.toml
mistralrs-mcp/: Cargo.toml  README.md
mistralrs-paged-attn/: Cargo.toml
mistralrs-pyo3/: Cargo.toml  README.md
mistralrs-quant/: Cargo.toml  README.md
mistralrs-server/: Cargo.toml
mistralrs-server-core/: Cargo.toml  README.md
mistralrs-server-core/src/: responses.rs
mistralrs-server/src/: main.rs  zap_server.rs
mistralrs-vision/: Cargo.toml  README.md
mistralrs-web-chat/: README.md
site/: CNAME  index.html  install.sh
