[package]
name = "hanzo-engine"
version = "0.6.0"
edition = "2021"
description = "Hanzo Engine - canonical inference + embedding engine for the Hanzo stack"
homepage = "https://github.com/hanzoai/engine"
repository = "https://github.com/hanzoai/engine"
license = "MIT"

[lib]
name = "hanzo_engine"
path = "src/lib.rs"

[[bin]]
name = "hanzo-engine"
path = "src/bin/hanzo-engine.rs"

[dependencies]
# Inference backend: high-level Rust facade + low-level core.
mistralrs = { path = "../mistralrs" }
mistralrs-core = { path = "../mistralrs-core" }

# Lib internals
anyhow = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[features]
default = ["metal"]
cuda = ["mistralrs-core/cuda"]
metal = ["mistralrs-core/metal"]
flash-attn = ["mistralrs-core/flash-attn"]
mkl = ["mistralrs-core/mkl"]
no-cuda = []
# Enables tests that actually load a model. Gated because the model file
# is large and slow to load.
real-model = []
