[package]
name = "hanzo-engine"
version = "0.6.0"
edition = "2021"
description = "Hanzo Engine - canonical inference + embedding engine for the Hanzo stack"
homepage = "https://github.com/hanzoai/engine"
repository = "https://github.com/hanzoai/engine"
license = "MIT"

[lib]
name = "hanzo_engine"
path = "src/lib.rs"

[[bin]]
name = "hanzo-engine"
path = "src/bin/hanzo-engine.rs"

[dependencies]
# Inference backend: high-level Rust facade + low-level core.
# Path is the workspace fork (kept in sync with upstream 0.8.x); version is
# the matching crates.io release so the manifest is publishable.
mistralrs = { version = "0.8.1", path = "../mistralrs" }
mistralrs-core = { version = "0.8.1", path = "../mistralrs-core" }

# Lib internals
anyhow = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[features]
default = ["metal"]
cuda = ["mistralrs-core/cuda"]
metal = ["mistralrs-core/metal"]
flash-attn = ["mistralrs-core/flash-attn"]
mkl = ["mistralrs-core/mkl"]
no-cuda = []
# Enables tests that actually load a model. Gated because the model file
# is large and slow to load.
real-model = []
